feat(content): implement frontend v2 new content task
